--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher-icon"
   ios: true
-  image_path: "civicalert/icon/civicicon.jpg"
+  image_path: "icon/appiconnew.png"
 
 
 
